[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/cover.png" type="Texture" id=1]
[ext_resource path="res://Main Menu/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 640, 402 )
scale = Vector2( 0.666667, 0.726605 )
texture = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.884
anchor_right = 0.5
anchor_bottom = 0.903
margin_left = -66.5
margin_top = -164.0
margin_right = 66.5
script = ExtResource( 2 )

[node name="Spaceflight" type="Button" parent="Menu"]
margin_right = 133.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "SpaceFlight"

[node name="Trajectory Planning" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 133.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Trajectory Planning"

[node name="Surface Operations" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 133.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Surface Operations"

[node name="Lunar Base Sim" type="Button" parent="Menu"]
margin_top = 72.0
margin_right = 133.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Lunar Base Sim"

[node name="Help" type="Button" parent="Menu"]
margin_top = 96.0
margin_right = 133.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Help"

[node name="Settings" type="Button" parent="Menu"]
margin_top = 120.0
margin_right = 133.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Settings"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 144.0
margin_right = 133.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Exit"

[node name="Title" type="RichTextLabel" parent="."]
visible = false
margin_left = 602.0
margin_top = 142.0
margin_right = 804.0
margin_bottom = 190.0
custom_fonts/normal_font = SubResource( 1 )
text = "LUNCO"

[connection signal="pressed" from="Menu/Spaceflight" to="Menu" method="_on_Spaceflight_pressed"]
[connection signal="pressed" from="Menu/Trajectory Planning" to="Menu" method="_on_Trajectory_Planning_pressed"]
[connection signal="pressed" from="Menu/Surface Operations" to="Menu" method="_on_Surface_Operations_pressed"]
[connection signal="pressed" from="Menu/Lunar Base Sim" to="Menu" method="_on_Lunar_Base_Sim_pressed"]
[connection signal="pressed" from="Menu/Help" to="Menu" method="_on_Help_pressed"]
[connection signal="pressed" from="Menu/Settings" to="Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="Menu" method="_on_Exit_pressed"]
